<resources>
    <string name="app_name">SendingEmail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="enter_your_mobile">Enter Your Mobile</string>
    <string name="sendfileattachment">SendFileAttachment</string>
    <string name="receipentaddress">Enter the receipient address</string>
</resources>
