<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    tools:context="com.example.user.sendingemail.MainActivity">

    <TextView
        android:id="@+id/txt_success_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000"
        android:textSize="40sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtname_reg"
        android:hint="@string/enter_full_name"
        android:maxLength="20"
        android:gravity="center"
        android:textColor="#000000"
        android:drawablePadding="10dp"
        android:textColorHint="#cccccc"
        android:drawableLeft="@drawable/account_1"
        android:layout_marginTop="20dp"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:gravity="center"
        android:maxLength="40"
        android:textColor="#000"
        android:textColorHint="#cccccc"
        android:id="@+id/txtemail_reg"
        android:hint="@string/enter_your_email"
        android:drawableLeft="@drawable/email_gray"
        android:drawablePadding="10dp"
        android:layout_marginTop="24dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/txtpass_reg"
        android:hint="@string/enter_your_password"
        android:maxLength="10"
        android:textColor="#000"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:textColorHint="#cccccc"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
       />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#32ADE3"
            android:text="@string/register"
            android:textColor="#000"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btn_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#32ADE3"
        android:text="@string/sendfileattachment"
        android:textColor="#000"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
         />
    </RelativeLayout>
</LinearLayout>
